                    Changes made to Pyjamas since 0.5
                    ---------------------------------

 * add pyjamas.log based on examples/libtest/write.py

 * registered builtin function 'cmp'. was already implemented but not
   registered in pyjs.py

 * added an --optimize option to which results in removing print
   statements. this could be further improved. e.g. when assert is
   implemented

 * fixed Mozilla "Permission Denied" bug in DOM.isOrHasChild

 * pyjslib.Dcit now use the hash method to generate keys internally,
   so it si possible to use objects as keys like in python. For
   limitations on dicts read examples/libtest/DictTest.py

                    Changes made to Pyjamas since 0.4
                    ---------------------------------

 * convert app "loading" to require the use of "if __name__ == '__main__'"
   bringing pyjamas into line with "standard" python.  apps can convert with
   contrib/pyjamas_0.4-0.5_upgrade/add_name_main.py to add a small codefragment
   at the end: "app = MyApp(); app.onModuleLoad()"

 * added string iterator (for c in "hello")

 * added stacktrace recording and notification when -d option is given
   to builder.  expensive but useful.

 * added a helper tool (in contrib) called replacer.py which helps convert
   apps: "from pyjamas.ui import X,Y" is converted to
   "from pyjamas.ui.X import X; from pyjamas.ui.Y import Y"

 * split ui.py into separate modules.  cache file sizes are now drastically
   reduced due to importing only including what is needed.  the reduction
   is possible with both dynamic and static code-generation, although not
   as much for static.

 * dynamic module loading is now possible (add -m 1 to build).  each module
   is placed in its own separate cache file, with platform overrides
   also getting their own cache file.  cache files are shared between
   platforms rather than four separate identical compiled modules being