@@ -60,6 +60,7 @@ PYJSLIB_BUILTIN_FUNCTIONS=("cmp",
                            "setattr",
                            "hasattr",
                            "int",
+                           "float",
                            "str",
                            "repr",
                            "range",
